<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.finn</groupId>
        <artifactId>oh-boot</artifactId>
        <version>4.0.3_260307</version>
    </parent>
    <groupId>com.finn.sys</groupId>
    <artifactId>oh-system</artifactId>
    <description>系统基础功能</description>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <properties>
        <!-- 打包的版本 -->
        <revision>4.0.1_20260308</revision>
        <java.version>21</java.version>
        <!-- postgresql -->
        <postgresql.version>42.7.10</postgresql.version>
    </properties>

    <dependencies>
        <!-- 系统框架：继承自根pom的依赖已包含所有必要的Spring Boot依赖 -->
        <dependency>
            <groupId>com.finn</groupId>
            <artifactId>oh-framework</artifactId>
        </dependency>

        <!-- 业务模块 -->
        <dependency>
            <groupId>com.finn.module</groupId>
            <artifactId>oh-module-app</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>com.finn.module</groupId>
            <artifactId>oh-module-flow</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!-- PostgreSQL驱动：由引入项目决定是否使用 -->
        <!--<dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>${postgresql.version}</version>
        </dependency>-->

        <!-- 数据库驱动：根据实际使用的数据库选择 -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- WebSocket -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-websocket</artifactId>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}-${revision}</finalName>
        <plugins>
            <!-- Maven 编译插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <mainClass>com.finn.ServerApplication</mainClass>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.ly.smart-doc</groupId>
                <artifactId>smart-doc-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
